styles: fix position of role in project, fix text overflow in buttons with dropdown

--- a/assets/styles/cv.styl
+++ b/assets/styles/cv.styl
@@ -187,7 +187,6 @@
   overflow hidden
   text-overflow ellipsis
   white-space nowrap
-  width 170px
 
 .screenshot-wrap
   height 100px
