--- a/assets/styles/user-page.styl
+++ b/assets/styles/user-page.styl
@@ -1,6 +1,12 @@
 .up-title
-  color: #b2b8bd;
+  color: #b2b8bd
 
 .up-data
   font-size: 2vh
-  font-family: Verdana;
+  font-family: Verdana
+  
+.btn-group
+	button
+		&.btn
+			text-overflow: ellipsis !important
+			overflow: hidden !important
